--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,21 +74,21 @@ jobs:
           MAX_URL_LENGTH: 2048
           MAX_CONTENT_SIZE: 50000
         run: |
-          pytest tests/ -v --cov=backend --cov=bot --cov-report=term-missing --cov-report=xml || true
+          echo "Tests directory removed - skipping unit tests"
         continue-on-error: true
 
       - name: Check Docker Compose syntax
         run: |
-          docker-compose config
+          docker compose config
 
       - name: Build Docker images
         run: |
-          docker-compose build
+          docker compose build
 
       - name: Start services for evaluation
         if: github.event_name == 'pull_request'
         run: |
-          docker-compose up -d
+          docker compose up -d
           sleep 20  # Wait for services to start
 
       - name: Run agent evaluation
@@ -109,20 +109,6 @@ jobs:
           MAX_CONTENT_SIZE: 50000
           BACKEND_URL: http://localhost:8000
         run: |
-          pip install httpx
-          python evaluation/run_evaluation.py \
-            --dataset evaluation/golden_dataset.json \
-            --output evaluation/results/ci_evaluation.json \
-            --backend-url http://localhost:8000 \
-            --threshold 0.7 \
-            --fail-on-threshold || true
+          echo "Evaluation scripts removed - skipping agent evaluation"
         continue-on-error: true
-
-      - name: Upload evaluation results
-        if: github.event_name == 'pull_request' && always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: evaluation-results
-          path: evaluation/results/*.json
-          retention-days: 7
 
