--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,20 +82,108 @@ jobs:
           NEO4J_PASSWORD: testpassword
           OPENROUTER_API_KEY: test-key
           TELEGRAM_TOKEN: test-token
+          NEO4J_USER: neo4j
+          NEO4J_URI: bolt://neo4j:7687
+          OPENROUTER_BASE_URL: https://openrouter.ai/api/v1
+          LLM_MODEL: test-model
+          MAX_CHARS: 2500
+          CHUNK_OVERLAP: 200
+          CONTEXT_CHAR_LIMIT: 120000
+          ENABLE_INPUT_FILTERING: true
+          ENABLE_OUTPUT_FILTERING: true
+          MAX_URL_LENGTH: 2048
+          MAX_CONTENT_SIZE: 50000
         run: |
-          docker compose config --quiet || echo "Docker compose config check skipped (env vars not critical for syntax check)"
+          # Create temporary .env file for docker compose
+          cat > .env << EOF
+          NEO4J_PASSWORD=testpassword
+          OPENROUTER_API_KEY=test-key
+          TELEGRAM_TOKEN=test-token
+          NEO4J_USER=neo4j
+          NEO4J_URI=bolt://neo4j:7687
+          OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
+          LLM_MODEL=test-model
+          MAX_CHARS=2500
+          CHUNK_OVERLAP=200
+          CONTEXT_CHAR_LIMIT=120000
+          ENABLE_INPUT_FILTERING=true
+          ENABLE_OUTPUT_FILTERING=true
+          MAX_URL_LENGTH=2048
+          MAX_CONTENT_SIZE=50000
+          EOF
+          docker compose config --quiet
 
       - name: Build Docker images
         env:
           NEO4J_PASSWORD: testpassword
           OPENROUTER_API_KEY: test-key
           TELEGRAM_TOKEN: test-token
+          NEO4J_USER: neo4j
+          NEO4J_URI: bolt://neo4j:7687
+          OPENROUTER_BASE_URL: https://openrouter.ai/api/v1
+          LLM_MODEL: test-model
+          MAX_CHARS: 2500
+          CHUNK_OVERLAP: 200
+          CONTEXT_CHAR_LIMIT: 120000
+          ENABLE_INPUT_FILTERING: true
+          ENABLE_OUTPUT_FILTERING: true
+          MAX_URL_LENGTH: 2048
+          MAX_CONTENT_SIZE: 50000
         run: |
+          # Create temporary .env file for docker compose
+          cat > .env << EOF
+          NEO4J_PASSWORD=testpassword
+          OPENROUTER_API_KEY=test-key
+          TELEGRAM_TOKEN=test-token
+          NEO4J_USER=neo4j
+          NEO4J_URI=bolt://neo4j:7687
+          OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
+          LLM_MODEL=test-model
+          MAX_CHARS=2500
+          CHUNK_OVERLAP=200
+          CONTEXT_CHAR_LIMIT=120000
+          ENABLE_INPUT_FILTERING=true
+          ENABLE_OUTPUT_FILTERING=true
+          MAX_URL_LENGTH=2048
+          MAX_CONTENT_SIZE=50000
+          EOF
           docker compose build --quiet
 
       - name: Start services for evaluation
         if: github.event_name == 'pull_request'
+        env:
+          NEO4J_PASSWORD: testpassword
+          OPENROUTER_API_KEY: test-key
+          TELEGRAM_TOKEN: test-token
+          NEO4J_USER: neo4j
+          NEO4J_URI: bolt://neo4j:7687
+          OPENROUTER_BASE_URL: https://openrouter.ai/api/v1
+          LLM_MODEL: test-model
+          MAX_CHARS: 2500
+          CHUNK_OVERLAP: 200
+          CONTEXT_CHAR_LIMIT: 120000
+          ENABLE_INPUT_FILTERING: true
+          ENABLE_OUTPUT_FILTERING: true
+          MAX_URL_LENGTH: 2048
+          MAX_CONTENT_SIZE: 50000
         run: |
+          # Create temporary .env file for docker compose
+          cat > .env << EOF
+          NEO4J_PASSWORD=testpassword
+          OPENROUTER_API_KEY=test-key
+          TELEGRAM_TOKEN=test-token
+          NEO4J_USER=neo4j
+          NEO4J_URI=bolt://neo4j:7687
+          OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
+          LLM_MODEL=test-model
+          MAX_CHARS=2500
+          CHUNK_OVERLAP=200
+          CONTEXT_CHAR_LIMIT=120000
+          ENABLE_INPUT_FILTERING=true
+          ENABLE_OUTPUT_FILTERING=true
+          MAX_URL_LENGTH=2048
+          MAX_CONTENT_SIZE=50000
+          EOF
           docker compose up -d
           sleep 20  # Wait for services to start
 
